--- a/css/style.css
+++ b/css/style.css
@@ -100,37 +100,74 @@ main {
     .titulo h2 {
         font-size: 40px;
     }
-    /*-----------------textoguitarra---------------------*/
-    .textos div {
-        display: flex;
-        justify-content: center;
-    }
-    
+    /*-----------------grilla-instrumentos---------------------*/
 
-    .textos div {
-        display: flex;
+
+    .grilla-index {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 150px;
+        margin-block: 150px;
         align-items: center;
-        color: #d5b75d;
-        padding-block: 4rem;
-        flex-wrap: wrap;
     }
 
-    .textos img {
-        height: 350px;
-        margin-inline: 40px;
+    .logo-instrumentos-grid { grid-area: 1 / 1 / 2 / 3; }
+    .ventas { grid-area: 1 / 3 / 2 / 5; }
+    .ventas2 { grid-area: 2 / 1 / 3 / 3; }
+    .logo-pedal-grid { grid-area: 2 / 3 / 3 / 5; }
+    .logo-amplificador-grid { grid-area: 3 / 1 / 4 / 3; }
+    .ventas3 { grid-area: 3 / 3 / 4 / 5; }
+
+    
+    .gibson h3{
+        font-size: 25px;
+    }
+    .gibson h4{
+        font-size: 18px;
+    }
+    .strato h3{
+        font-size: 25px;
+    }
+    .strato h4{
+        font-size: 18px;
     }
 
-    .textos  h1{
+    .logo-instrumentos-grid img {
         width: 600px;
+        height: 400px;
+        border-radius: 5%;
     }
-
-
-
+    .logo-pedal-grid img {
+        width: 600px;
+        height: 400px;
+        margin-left: 50px;
+        border-radius: 5%;
+    }
+    .logo-amplificador-grid img {
+        width: 600px;
+        height: 400px;
+        border-radius: 5%;
+    }
 
     /*-----------------venta---------------------*/
     .ventas {
         display: flex;
-        flex-wrap: wrap;
+        justify-content: space-around;
+        padding-block: 60px;
+        padding-top: 50px;
+        text-align: center;
+    }
+    .ventas2 {
+        display: flex;
+        justify-content: space-around;
+        padding-block: 60px;
+        padding-top: 50px;
+        text-align: center;
+    }
+    .ventas3 {
+        display: flex;
         justify-content: space-around;
         padding-block: 60px;
         padding-top: 50px;
@@ -140,17 +177,22 @@ main {
     .venta {
         padding: 2rem;
         align-items: center;
+        background-color: #151515;
+        border-radius: 5%;
     }
     .venta div {
         max-width: 500px;
     }
-    .venta h2 {
+    .venta h3 {
         color: #d5b75d;
+    }
+    .venta h4 {
+        color: cadetblue;
     }
     .venta img {
         margin-inline: 20px;
-        width: 400px;
-        height: 400px;
+        width: 200px;
+        height: 200px;
     }
     /*-----------------equipos---------------------*/
     .equipo {
