--- a/css/style.css
+++ b/css/style.css
@@ -125,18 +125,7 @@ body {
     .logo-amplificador-grid { grid-area: 3 / 1 / 4 / 3; }
     .ventas3 { grid-area: 3 / 3 / 4 / 5; }
 
-    .ventas {
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .ventas2 {
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .ventas3 {
-        display: flex;
-        flex-wrap: wrap;
-    }
+
 
     
     .gibson h3{
@@ -173,6 +162,7 @@ body {
     .ventas {
         display: flex;
         justify-content: space-around;
+        flex-wrap: wrap;
         padding-block: 60px;
         padding-top: 50px;
         text-align: center;
@@ -180,6 +170,7 @@ body {
     .ventas2 {
         display: flex;
         justify-content: space-around;
+        flex-wrap: wrap;
         padding-block: 60px;
         padding-top: 50px;
         text-align: center;
@@ -187,6 +178,7 @@ body {
     .ventas3 {
         display: flex;
         justify-content: space-around;
+        flex-wrap: wrap;
         padding-block: 60px;
         padding-top: 50px;
         text-align: center;
@@ -213,23 +205,26 @@ body {
         height: 200px;
     }
     /*-----------------equipos---------------------*/
-    .equipo {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        padding: 2rem;
-        align-items: center;
-        margin-block: 40px;
-        color: #d5b75d;
+    .grilla-venta {
+        padding-inline: 40px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        grid-column-gap: 50px;
+        grid-row-gap: 50px;
     }
-    .equipo div {
-        max-width: 500px;
-    }
-    .equipo img {
-        margin-inline: 20px;
-        width: 400px;
-        height: 400px;
-    }
+    .venta1 { grid-area: 1 / 1 / 2 / 2; }
+    .venta2 { grid-area: 1 / 2 / 2 / 3; }
+    .venta3 { grid-area: 1 / 3 / 2 / 4; }
+    .venta4 { grid-area: 2 / 1 / 3 / 2; }
+    .venta5 { grid-area: 2 / 2 / 3 / 3; }
+    .venta6 { grid-area: 2 / 3 / 3 / 4; }
+    .venta7 { grid-area: 3 / 1 / 4 / 2; }
+    .venta8 { grid-area: 3 / 2 / 4 / 3; }
+    .venta9 { grid-area: 3 / 3 / 4 / 4; }
+    .venta10 { grid-area: 4 / 1 / 5 / 2; }
+    .venta11 { grid-area: 4 / 2 / 5 / 3; }
+    .venta12 { grid-area: 4 / 3 / 5 / 4; }
     /*-----------------nosotros---------------------*/
     .nosotros {
         display: flex;
@@ -408,6 +403,10 @@ body {
         width: 200px;
         height: 200px;
     }
+    .grilla-venta {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
 @media (max-width: 576px) {
     
@@ -431,8 +430,8 @@ body {
     }
 
     .venta img {
-        width: 200px;
-        height: 200px;
+        width: 100px;
+        height: 100px;
     }
 
     .equipo img {
