--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Prompt&display=swap');
@@ -26,6 +20,9 @@ h2 {
 }
 h3 {
     font-family: 'Prompt', sans-serif;
+}
+h4 {
+    font-family: 'Space Mono', monospace;
 }
 p {
     font-family: 'Prompt', sans-serif;
@@ -99,7 +96,7 @@ body {
     /*-----------------NAV---------------------*/
 /*-----------------HEADER---------------------*/
 /*-----------------MAIN---------------------*/
-.fondo-index {
+.fondo-img {
     background-image: url("../img/fondoparaindex.png");
     background-position: center center;
     height: 100%;
@@ -150,12 +147,9 @@ body {
     .ventas3 { 
         grid-area: 3 / 3 / 4 / 5;}
 
-    .logo-instrumentos-grid:hover {transform: rotatey(26deg) rotatex(20deg);
-        scale: 1.2;}
-    .logo-pedal-grid:hover {transform: rotatey(-26deg) rotatex(-20deg);
-        scale: 1.2;}
-    .logo-amplificador-grid:hover {transform: rotatey(26deg) rotatex(20deg);
-        scale: 1.2;}
+    .logo-instrumentos-grid:hover {scale: 1.2;}
+    .logo-pedal-grid:hover {scale: 1.2;}
+    .logo-amplificador-grid:hover {scale: 1.2;}
 
 
 
@@ -355,7 +349,7 @@ body {
     }
 
     .redes a h3 {
-        color: #d5b75d;
+        color: #260eff;
     }
 
 
