--- a/css/partials/_fonts.scss
+++ b/css/partials/_fonts.scss
@@ -1,3 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Prompt&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Rowdies&display=swap');
+/*font-family: 'Rowdies', sans-serif;*/
+
+@import url('https://fonts.googleapis.com/css2?family=Markazi+Text&display=swap');
+/*font-family: 'Markazi Text', serif;*/
+
+@import url('https://fonts.googleapis.com/css2?family=Aladin&display=swap');
+/*font-family: 'Aladin', system-ui;*/
