--- a/css/partials/_footer.scss
+++ b/css/partials/_footer.scss
@@ -23,6 +23,7 @@ footer {
             }
             h3 {
                 color: $color-letras-dor;
+                font-family: 'Aladin', system-ui;
             }
         }
     }
