--- a/css/partials/_titulo.scss
+++ b/css/partials/_titulo.scss
@@ -1,13 +1,21 @@
 .titulo {
     color: white;
-        text-align: center;
-        background-color: $color-principal;
-        padding-block: 15px;
-
-        h1 {
-            font-size: 100px;
-        }
-        h2 {
-            font-size: 40px;
-        }
+    text-align: center;
+    background-color: $color-principal;
+    padding-bottom: 15px;
+    
+    h1 {
+        height: 125px;
+        font-size: 130px;
+        font-family: 'Markazi Text', serif;
+        padding-top: 0;
+        margin: 0;
+    }
+    h2 {
+        
+        font-size: 40px;
+        font-family: 'Markazi Text', serif;
+        padding: 0;
+        margin: 0;
+    }
 }
