--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -1,5 +1,5 @@
-@import "./partials/reset";
 @import "./partials/variables";
+@import "./partials/reset";
 @import "./partials/body";
 @import "./partials/header";
 @import "./partials/fonts";
@@ -8,3 +8,6 @@
 @import "./partials/ventas";
 @import "./partials/grillas";
 @import "./partials/footer";
+@import "./partials/nosotros";
+@import "./partials/contacto";
+@import "./partials/Media-quaris";
