--- a/css/partials/_grillas.scss
+++ b/css/partials/_grillas.scss
@@ -44,3 +44,25 @@
         .ventas3 { 
             grid-area: 3 / 3 / 4 / 5;}
 }
+
+/*--------GRILLA-DE-VENTAS---------------*/
+.grilla-venta {
+    padding-inline: 40px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 50px;
+    grid-row-gap: 50px;
+    .venta1 { grid-area: 1 / 1 / 2 / 2; }
+    .venta2 { grid-area: 1 / 2 / 2 / 3; }
+    .venta3 { grid-area: 1 / 3 / 2 / 4; }
+    .venta4 { grid-area: 2 / 1 / 3 / 2; }
+    .venta5 { grid-area: 2 / 2 / 3 / 3; }
+    .venta6 { grid-area: 2 / 3 / 3 / 4; }
+    .venta7 { grid-area: 3 / 1 / 4 / 2; }
+    .venta8 { grid-area: 3 / 2 / 4 / 3; }
+    .venta9 { grid-area: 3 / 3 / 4 / 4; }
+    .venta10 { grid-area: 4 / 1 / 5 / 2; }
+    .venta11 { grid-area: 4 / 2 / 5 / 3; }
+    .venta12 { grid-area: 4 / 3 / 5 / 4; }
+}
