--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -10,4 +10,6 @@
 @import "./partials/footer";
 @import "./partials/nosotros";
 @import "./partials/contacto";
-@import "./partials/Media-quaris";
+@import "./partials/productos";
+
+@import "./partials/media-queries";
