--- a/css/partials/_titulo.scss
+++ b/css/partials/_titulo.scss
@@ -5,7 +5,7 @@
     padding-bottom: 15px;
     
     h1 {
-        height: 125px;
+        height: 15%;
         font-size: 130px;
         font-family: 'Markazi Text', serif;
         padding-top: 0;
