--- a/css/partials/_reset.scss
+++ b/css/partials/_reset.scss
@@ -14,7 +14,7 @@ a {
     text-decoration: none;
 }
 h1 {
-    font-family: 'Prompt', sans-serif;
+    font-family: 'Space Mono', monospace;
 }
 h2 {
     font-family: 'Space Mono', monospace;
