--- a/css/estilo.css
+++ b/css/estilo.css
@@ -22,7 +22,7 @@ a {
 }
 
 h1 {
-  font-family: "Prompt", sans-serif;
+  font-family: "Space Mono", monospace;
 }
 
 h2 {
@@ -62,7 +62,7 @@ body {
   padding-inline: 2rem;
   text-decoration: none;
 }
-.header .logo:hover h2 {
+.header .logo:hover h1 {
   transform: rotate(10deg);
   scale: 1.2;
 }
@@ -75,7 +75,7 @@ body {
   margin-right: 10px;
   transition: 1s ease-out;
 }
-.header h2 {
+.header .logo h1 {
   color: white;
   margin-top: 2.3rem;
   font-family: "Aladin", system-ui;
@@ -154,7 +154,6 @@ body {
 .ventas {
   display: flex;
   justify-content: space-around;
-  flex-wrap: wrap;
   padding-block: 60px;
   padding-top: 50px;
   text-align: center;
@@ -163,7 +162,6 @@ body {
 .ventas2 {
   display: flex;
   justify-content: space-around;
-  flex-wrap: wrap;
   padding-block: 60px;
   padding-top: 50px;
   text-align: center;
@@ -172,7 +170,6 @@ body {
 .ventas3 {
   display: flex;
   justify-content: space-around;
-  flex-wrap: wrap;
   padding-block: 60px;
   padding-top: 50px;
   text-align: center;
@@ -186,6 +183,7 @@ body {
   grid-row-gap: 0px;
   padding-block: 150px;
   align-items: center;
+  flex-wrap: wrap;
 }
 .grilla-index .logo-instrumentos-grid {
   grid-area: 1/1/2/3;
@@ -331,6 +329,9 @@ footer .redes a h3 {
   padding-bottom: 5px;
   color: #d5b75d;
 }
+.nosotros .subtexto p {
+  font-size: 20px;
+}
 
 .contactotitulo {
   display: flex;
@@ -409,7 +410,7 @@ footer .redes a h3 {
   transform: translateY(2px);
 }
 
-@media (max-width: 990px) {
+@media (max-width: 1400px) {
   .header .conf {
     justify-content: center;
   }
@@ -420,7 +421,7 @@ footer .redes a h3 {
     font-size: 30px;
   }
   .venta {
-    margin: 55px;
+    margin: 5px;
   }
   .venta img {
     width: 300px;
@@ -446,9 +447,11 @@ footer .redes a h3 {
   }
   .grilla-index .logo-instrumentos-grid img {
     width: 100%;
+    height: 100%;
   }
   .grilla-index .ventas {
     grid-area: 2/1/4/3;
+    flex-wrap: wrap;
   }
   .grilla-index .ventas img {
     width: 200px;
@@ -459,10 +462,12 @@ footer .redes a h3 {
   }
   .grilla-index .logo-pedal-grid img {
     width: 100%;
+    height: 100%;
     margin-left: 0px;
   }
   .grilla-index .ventas2 {
     grid-area: 5/1/7/3;
+    flex-wrap: wrap;
   }
   .grilla-index .ventas2 img {
     width: 200px;
@@ -473,15 +478,11 @@ footer .redes a h3 {
   }
   .grilla-index .logo-amplificador-grid img {
     width: 100%;
-  }
-  .grilla-index .logo-amplificador-grid {
-    grid-area: 7/1/8/3;
-  }
-  .grilla-index .logo-amplificador-grid img {
-    width: 100%;
+    height: 100%;
   }
   .grilla-index .ventas3 {
     grid-area: 8/1/10/3;
+    flex-wrap: wrap;
   }
   .grilla-index .ventas3 img {
     width: 200px;
