--- a/css/partials/_media-queries.scss
+++ b/css/partials/_media-queries.scss
@@ -1,4 +1,4 @@
-@media (max-width: 990px) {
+@media (max-width: 1400px) {
 
 
     .header{
@@ -17,7 +17,7 @@
     }
 
     .venta {
-        margin: 55px;
+        margin: 5px;
         img {
             width: 300px;
             height: 300px;
@@ -45,10 +45,12 @@
             grid-area: 1 / 1 / 2 / 3; 
             img {
                 width: 100%;
+                height: 100%;
             }
         }
         .ventas {
             grid-area: 2 / 1 / 4 / 3;
+            flex-wrap: wrap;
             img{
                 width: 200px;
                 height: 200px;
@@ -58,30 +60,29 @@
             grid-area: 4 / 1 / 5 / 3;
             img {
                 width: 100%;
+                height: 100%;
                 margin-left: 0px;
             }
         }
         .ventas2 { 
-            grid-area: 5 / 1 / 7 / 3; 
+            grid-area: 5 / 1 / 7 / 3;
+            flex-wrap: wrap;
             img{
                 width: 200px;
                 height: 200px;
             }
         }
+        
         .logo-amplificador-grid { 
             grid-area: 7 / 1 / 8 / 3; 
             img {
                 width: 100%;
-            }
-        }
-        .logo-amplificador-grid { 
-            grid-area: 7 / 1 / 8 / 3; 
-            img {
-                width: 100%;
+                height: 100%;
             }
         }
         .ventas3 {
             grid-area: 8 / 1 / 10 / 3;
+            flex-wrap: wrap;
             img{
                 width: 200px;
                 height: 200px;
