--- a/css/partials/_nosotros.scss
+++ b/css/partials/_nosotros.scss
@@ -20,5 +20,8 @@
             padding-bottom: 5px;
             color: #d5b75d;
         }
+        p {
+            font-size: 20px;
+        }
     }
 }
