--- a/css/estilo.css
+++ b/css/estilo.css
@@ -100,7 +100,25 @@ body {
 /*font-family: 'Markazi Text', serif;*/
 /*font-family: 'Aladin', system-ui;*/
 .fondo-img {
-  background-image: url("../img/fondoparaindex.png");
+  background-image: url("../../img/fondoparaindex.jpg");
+  background-position: center center;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.fondo-instrumentos {
+  background-image: url("../../img/fondo-intrumentos.jpg");
+  background-position: center center;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.fondo-equipos {
+  background-image: url("../../img/fondo-equipos.jpg");
   background-position: center center;
   height: 100%;
   background-repeat: no-repeat;
