--- a/css/partials/_nosotros.scss
+++ b/css/partials/_nosotros.scss
@@ -9,7 +9,7 @@
         }
         h3 {
             padding-bottom: 5px;
-            color: #d5b75d;
+            color: $color-letras-dor;
         }
     }
     .subtexto {
@@ -18,7 +18,7 @@
         color: white;
         h3 {
             padding-bottom: 5px;
-            color: #d5b75d;
+            color: $color-letras-dor;
         }
         p {
             font-size: 20px;
