--- a/css/partials/_fondo-img.scss
+++ b/css/partials/_fondo-img.scss
@@ -1,5 +1,5 @@
 .fondo-img {
-    background-image: url("../../img/fondoparaindex.jpg");
+    background-image: url("../img/fondoparaindex.jpg");
     background-position: center center;
     height: 100%;
     background-repeat: no-repeat;
@@ -8,7 +8,7 @@
 }
 
 .fondo-instrumentos {
-    background-image: url("../../img/fondo-intrumentos.jpg");
+    background-image: url("../img/fondo-intrumentos.jpg");
     background-position: center center;
     height: 100%;
     background-repeat: no-repeat;
@@ -17,7 +17,7 @@
 }
 
 .fondo-equipos {
-    background-image: url("../../img/fondo-equipos.jpg");
+    background-image: url("../img/fondo-equipos.jpg");
     background-position: center center;
     height: 100%;
     background-repeat: no-repeat;
